<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/material_margin"
    android:visibility="invisible"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/large_image"
            android:layout_width="@dimen/large_image"
            android:layout_height="@dimen/large_image"
            android:layout_marginRight="@dimen/material_margin"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/label_text_size"
                android:text="@string/detailName"/>
            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_label"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size" />
            <TextView
                android:id="@+id/company_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/label_text_size"
                android:layout_below="@+id/name_text"
                android:text="@string/companyLabel"/>
            <TextView
                android:id="@+id/company_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_label"
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_size" />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/phone_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/label_text_size"
                android:text="@string/phoneLabel"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_label">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/home_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textSize="@dimen/main_text_size"
                        android:textColor="@color/black"/>
                    <TextView
                        android:id="@+id/home_phone_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondary"
                        android:textSize="@dimen/label_text_size"
                        android:gravity="right"
                        android:text="@string/homeLabel"/>
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin"
        android:orientation="horizontal">
        <!-- INIT ADDRESS SECTION-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/label_text_size"
                android:text="@string/addressLabel"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_label">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left">
                        <TextView
                            android:id="@+id/street"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/main_text_size"
                            android:textColor="@color/black"/>
                        <TextView
                            android:id="@+id/outerAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/main_text_size"
                            android:layout_below="@+id/street"
                            android:textColor="@color/black"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondary"
                        android:textSize="@dimen/label_text_size"
                        android:gravity="right"
                        android:text="@string/workLabel"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <!-- END ADDERSS SECTION-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/birthdate_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/label_text_size"
                android:text="@string/birthdateLabel"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/birthdate_label">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/birthdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textSize="@dimen/main_text_size"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin"
        android:layout_marginBottom="@dimen/material_margin_bottom"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondary"
                android:textSize="@dimen/label_text_size"
                android:text="@string/emailLabel"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_label">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textSize="@dimen/main_text_size"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorSecondary"
                        android:textSize="@dimen/label_text_size"
                        android:gravity="right"
                        android:text="@string/workLabel"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
